# lofx

./: .gitignore  CMakeLists.txt  deps.json  initdeps.bat  initdeps.sh
include/: storage.hpp
include/LOFX/: lofx.hpp
src/: lofx.cpp
tests/: CMakeLists.txt
tests/exr-reader/: CMakeLists.txt  main.cpp
tests/exr-reader/ext/: tinydir.h  tinyexr.h
tests/grfx/: CMakeLists.txt  main.cpp
tests/grfx/shaders/: fragment.fs  vertex.vs
tests/hello-world/: CMakeLists.txt  main.cpp  man.dae  man.fbx  man.gltf
tests/hello-world/resources/kernels/: filters.cl  kernel.cl  reinhard.cl
tests/terrain/: CMakeLists.txt  main.cpp
